# Lumen-Backend

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test_main.http
.github/workflows/: tests.yml
app/api/routes/: example.py
app/api/routes/health_check/: health_check.py
app/api/routes/users/: user_api.py
app/db/: base.py  database.py
app/enums/: __init__.py  enums.py
app/models/: __init__.py
app/models/cohorts/: cohort.py
app/models/components/: component.py
app/models/enrollments/: enrollment.py
app/models/levels/: level.py
app/models/scorm_progress/: scorm_progress.py
app/models/unit/: unit.py
app/models/users/: user.py
app/schemas/cohorts/: __init__.py  cohort.py
app/schemas/components/: __init__.py  component.py
app/schemas/enrollments/: __init__.py  enrollment.py
app/schemas/levels/: __init__.py  level.py
app/schemas/scorm_progress/: __init__.py  scorm_progress.py
app/schemas/unit/: __init__.py  unit.py
app/schemas/users/: user.py
migrations/: env.py
migrations/versions/: 62e3aa3ee6bb_creation_of_init_tables.py  9ec89b245549_seed_initial_data.py  f93d4cdc2ac3_init_core_tables.py
src/api/routes/health_check/: health_check.py
src/api/routes/users/: user_api.py
src/core/: config.py
src/data/: __init__.py
src/data/interfaces/: repository_crud_interface.py
src/data/user/: user_repository.py
src/db/: base.py  database.py
src/enums/: __init__.py  enums.py
src/model/: __init__.py
src/model/courses/: course.py
src/model/enrollments/: enrollment.py
src/model/lessons/: lesson.py
src/model/modules/: module.py
src/model/progress/: progress.py
src/model/sections/: section.py
src/model/users/: user.py
src/schema/: __init__.py
src/schema/enrollments/: __init__.py
src/schema/users/: __init__.py  user_dto.py
src/service/: __init__.py
src/service/interfaces/: service_crud_interface.py
src/service/user/: user_service.py
tests/: conftest.py
tests/builders/: __init__.py  user_builders.py
tests/fixtures/: __init__.py  base_crud_services_test.py  model_fixtures.py  user_fixture.py
tests/fixtures/generic/: __init__.py  base_crud_service_tests.py  fake_base_repository.py
tests/unit/models/: test_cohort.py  test_component.py  test_enrollment.py  test_level.py  test_scorm_progress.py  test_unit.py  test_user.py
tests/unit/schemas/: __init__.py  test_user.py
tests/unit/user/: __init__.py  fake_user_repository.py  test_services.py  test_user_crud_services.py
