[tool.poetry]
name = "Lumen"
version = "0.1.0"
description = ""
authors = ["SebastianVillegasVelasquez <villegasvelasquezs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.0"
uvicorn = "^0.44.0"
pytest = "^9.0.3"
requests = "^2.33.1"
httpx = "^0.28.1"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.49"
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"


[tool.poetry.group.research.dependencies]
jupyter = "^1.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
