[tool.poetry]
name = "Lumen"
version = "0.1.0"
description = ""
authors = ["SebastianVillegasVelasquez <villegasvelasquezs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.0"
uvicorn = "^0.44.0"
pytest = "^9.0.3"
requests = "^2.33.1"
httpx = "^0.28.1"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.49"
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pre-commit = "^4.6.0"
ruff = "^0.15.12"
mypy = "^2.1.0"


[tool.poetry.group.research.dependencies]
jupyter = "^1.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"

warn_return_any = false
warn_unused_configs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false

ignore_missing_imports = true

namespace_packages = true
explicit_package_bases = true

warn_unused_ignores = true
warn_redundant_casts = true

plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "src.model.*",
    "src.schema.*",
    "src.service.*",
]
ignore_errors = false



[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
